IMPALA-1556: Sasl transport should be wrapped with buffered transport

Previously the underlying transport was first wrapped with a buffered
transport and then the sasl transport. This resulted in a significant
performance issue because every buffer written to the transport was
wrapped by the sasl transport. By switching the order of the buffered
transport and sasl transports, larger buffers are then passed to the
sasl transport.

In a simple test where 10 million ints were returned to the client:
Without kerberos:         1min, 39s
Kerberos enabled, before: 5min, 20s
Kerberos enabled, after:  2min, 26s

There is still a 47s difference between the current time with
kerberos enabled and without. Further investigation is necessary to
account for that time and to determine if there are any other
performance improvements we might be able to make.

Change-Id: I68f1be70a3f70ce7b6381bf011842f8422312268
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/5461
Reviewed-by: Matthew Jacobs <mj@cloudera.com>
Tested-by: jenkins