be/src/rpc/thrift-server.cc
@@ -205,19 +205,18 @@ void* ThriftServer::ThriftServerEventProcessor::createContext(shared_ptr<TProtoc
   TTransport* transport = input->getTransport().get();
   shared_ptr<ConnectionContext> connection_ptr =
       shared_ptr<ConnectionContext>(new ConnectionContext);
-  TBufferedTransport* buffered_transport = NULL;
+  TTransport* underlying_transport =
+      (static_cast<TBufferedTransport*>(transport))->getUnderlyingTransport().get();
   if (!thrift_server_->auth_provider_->is_sasl()) {
-    buffered_transport = static_cast<TBufferedTransport*>(transport);
+    socket = static_cast<TSocket*>(underlying_transport);
   } else {
-    TSaslServerTransport* sasl_transport = static_cast<TSaslServerTransport*>(transport);
-    buffered_transport = static_cast<TBufferedTransport*>(
-        sasl_transport->getUnderlyingTransport().get());
+    TSaslServerTransport* sasl_transport = static_cast<TSaslServerTransport*>(
+        underlying_transport);
 
     // Get the username from the transport.
     connection_ptr->username = sasl_transport->getUsername();
+    socket = static_cast<TSocket*>(sasl_transport->getUnderlyingTransport().get());
   }
-
-  socket = static_cast<TSocket*>(buffered_transport->getUnderlyingTransport().get());
 
   {
     connection_ptr->server_name = thrift_server_->name_;
